show image in feed

--- a/deve_web/deve_web/Views/feed.css
+++ b/deve_web/deve_web/Views/feed.css
@@ -5,10 +5,45 @@ body{
 	padding:0
 }
 
+
 html {
 	margin:0; 
 	padding:0
 }
+.description{
+	font-size:14px;
+	color:#000000;
+}
+
+.users{
+	margin:10px 0;
+	padding-bottom:10px;
+	font-size: 250%;
+	width:180px;
+	color:#78788c;
+	border-bottom:3px solid #78788c}
+
+.image{
+
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-top: 30px;
+	padding-bottom: 2px;
+}
+Panel{
+	width:600px;height:440px;
+	background:#e6e6e6;
+	border-radius:8px;
+	box-shadow:0 0 40px -10px #000;
+	margin:calc(50vh - 220px) auto;
+	padding:20px 30px;
+	max-width:calc(100vw - 40px);
+	box-sizing:border-box;
+	font-family:'Montserrat',sans-serif;
+	position:relative
+}
+
+
 .right{
     float: right;
 }
@@ -25,6 +60,18 @@ html {
 	border-bottom:2px solid #bebed2
 }
 
+.posters{
+	width:600px;height:900px;
+	background:#e6e6e6;
+	border-radius:8px;
+	box-shadow:0 0 40px -10px #000;
+	margin:calc(50vh - 220px) auto;
+	padding:20px 30px;
+	max-width:calc(100vw - 40px);
+	box-sizing:border-box;
+	font-family:'Montserrat',sans-serif;
+	position:relative
+}
 
 .form{
 	width:600px;height:440px;
